first draft blog page html and some javascript outlines

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="right-input">
       <div class="input-form">
         <h1>What's On Your Mind?</h1>
-        <form action="http://127.0.0.1:5500/blog.html" method="POST" class="form-input">
+        <form action="./blog.html" method="POST" class="form-input">
           <label for="form-input-username" class="username">Username:</label><br>
           <input type="text" class="input-username"><br>
           <label for="form-input-title" class="title">Title:</label><br>
@@ -36,10 +36,9 @@
       </div>
     </div>
 
-    <script src="assets/js/form.js"></script>
-    <script src="assets/js/blog.js"></script>
     <script src="assets/js/logic.js"></script>
+    <script src="assets/js/form.js"></script>
   
   </body>
-  
+
 </html>
