add first draft js logic

--- a/blog.html
+++ b/blog.html
@@ -11,18 +11,33 @@
   <body>
     <header>
       <h1>My First Blog</h1>
-      <button id="toggle-dark">
+      <button id="theme-switcher">
         <span>☀️</span>
       </button>
+      <button id="back-button">Back</button>
     </header>
 
     <main>
-      <p> BLOG ARTICLES GO HERE</p>
+      <div class="input-container">
+        <div id="input-display-username"></div>
+        <div id="input-display-title"></div>
+        <div id="input-display-content"></div>
+      </div>
     </main>
 
+    <footer>
+      <div>
+        <nav>
+          <a href="#">Portfolio:</a>
+          <a href="#">Blog:</a>
+          <a href="#">Email:</a>
+        </nav>
+      </div>
+      <div>
+        <h4>Made with ❤️ by Dawson</h4>
+      </div>
+    </footer>
     <script src="assets/js/logic.js"></script>
     <script src="assets/js/blog.js"></script>
-
-    <footer>FOOTER</footer>
   </body>
 </html>
