--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <button id="toggle-dark">
+      <button id="theme-switcher">
         <span>☀️</span>
       </button>
     </header>
