fix javascript and finish styling

--- a/blog.html
+++ b/blog.html
@@ -11,30 +11,27 @@
   <body>
     <header>
       <h1>My First Blog</h1>
+      <input type="checkbox" id="back-click">
+      <label for="back-click" class="back-page"></label>
       <button id="theme-switcher">
         <span>☀️</span>
       </button>
-      <button id="back-button">Back</button>
     </header>
 
     <main>
-      <div class="input-container">
-        <div id="input-display-username"></div>
-        <div id="input-display-title"></div>
-        <div id="input-display-content"></div>
-      </div>
+      <div id="submission-list"></div>
     </main>
 
     <footer>
       <div>
+        <div>
+          <h4>Made with ❤️ by Dawson</h4>
+        </div>
         <nav>
-          <a href="#">Portfolio:</a>
-          <a href="#">Blog:</a>
-          <a href="#">Email:</a>
+          <a href="https://dawsofd.github.io/professional-portfolio/"><b>Portfolio:</b> Dawson Dohlen</a>
+          <a href="https://dawsofd.github.io/personal-blog.index.html"><b>Blog:</b> Dawson's First Blog</a>
+          <a href="mailto:d.dohlen@pm.me"><b>Email:</b> d.dohlen@pm.me</a>
         </nav>
-      </div>
-      <div>
-        <h4>Made with ❤️ by Dawson</h4>
       </div>
     </footer>
     <script src="assets/js/logic.js"></script>
