fix dark/light toggle

--- a/blog.html
+++ b/blog.html
@@ -13,9 +13,10 @@
       <h1>My First Blog</h1>
       <input type="checkbox" id="back-click">
       <label for="back-click" class="back-page"></label>
-      <button id="theme-switcher">
-        <span>☀️</span>
-      </button>
+      <label class="switch">
+        <input type="checkbox" id="theme-switcher">
+        <span class="slider round"></span>
+        </label>
     </header>
 
     <main>
