--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
 
     <header>
-      <button id="theme-switcher">
-        <span>☀️</span>
-      </button>
+      <label class="switch">
+        <input type="checkbox" id="theme-switcher">
+        <span class="slider round"></span>
+        </label>
     </header>
 
     <div class="left-logo">
